@@ -191,15 +191,15 @@ _Polygons = {
               (-1, -0.3), (-1, 0.3), (-0.3, 0.3), (-0.3, 1) ),
     'octogon': ( (0.414, 1), (1, 0.414), (1, -0.414), (0.414, -1),
                  (-0.414, -1), (-1, -0.414), (-1, 0.414), (-0.414, 1) ),
-    'triangle': ( (0, -1), (0.866, 0.5), (-0.866, 0.5) ),
-    'cross': ( (-0.495, 0.919), (0.000, 0.424), (0.495, 0.919), (0.919, 0.495),
-               (0.424, -0.000), (0.919, -0.495), (0.495, -0.919),
-               (-0.000, -0.424), (-0.495, -0.919), (-0.919, -0.495),
-               (-0.424, 0.000), (-0.919, 0.495) ),
-    'star': ( (0.000, -1.000), (-0.225, -0.309), (-0.951, -0.309),
-              (-0.363, 0.118), (-0.588, 0.809), (-0.000, 0.382),
-              (0.588, 0.809), (0.363, 0.118), (0.951, -0.309),
-              (0.225, -0.309) ),
+    'triangle': ( (0, -1.2), (1.0392, 0.6), (-1.0392, 0.6) ),
+    'cross': ( (-0.594, 1.1028), (0, 0.5088), (0.594, 1.1028),
+               (1.1028, 0.594), (0.5088, -0), (1.1028, -0.594),
+               (0.594, -1.1028), (-0, -0.5088), (-0.594, -1.1028),
+               (-1.1028, -0.594), (-0.5088, 0), (-1.1028, 0.594) ),
+    'star': ( (0, -1.2), (-0.27, -0.3708), (-1.1412, -0.3708),
+              (-0.4356, 0.1416), (-0.7056, 0.9708), (-0, 0.4584),
+              (0.7056, 0.9708), (0.4356, 0.1416), (1.1412, -0.3708),
+              (0.27, -0.3708) ),
     'pentagon': ( (0, -1), (0.951, -0.309), (0.578, 0.809),
                   (-0.578, 0.809), (-0.951, -0.309) ),
     'tievert': ( (-1, -1), (1, -1), (-1, 1), (1, 1) ),
